2007-08-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/include/yarp/dev/GPUInterface.h: checked in
	this and a set of nvidia-related files for Giacomo Spigler,
	which gives a basic GPU interface for nvidia hardware.

2007-08-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/DgramTwoWayStream.cpp: a set of changes
	to better control multicast routing when multiple interfaces
	are present; standard network selection commands like:
	  yarp connect /port/1 mcast://net=10.0.0/port/2
	now do exactly what you would expect (route multicast 
	packets on the path from source port /port/1 to destination 
	port /port/2 through interfaces associated with IP addresses 
	beginning with 10.0.0.
	

2007-08-02  Alex Bernardino, Carlos Beltran  <alex@isr.ist.utl.pt>, <cbeltran@dist.unige.it> 

	* src/libYARP_dev/src/serial
	Driver for Serial communications 
	This driver creates an OS independent serial communications 
	driver for YARP. We exploit the capacity of ACE (Adaptive 
	Communications Environment) to provide serial communications. 
	
	* src\libYARP_dev\include\yarp\dev\ServerSerial.h.
	The companion network wrapper that provides a "yarpdev" server 
	for the driver.
	Invocation example:
	>> yarpdev --device serialport --comport COM4 --file serial.ini
	The server opens two ports (defaults /serial/in and /serial/out) 
	that receive and send Bottles to the clients, containing the 
	characters to send/receive to/from the serial link. To test the 
	driver, you may use a rs232 9-pin plug with pins 2 and 3 
	shortcutted (rx/tx) then send strings to the input port 
	using yarp write and attach a yarp read to the output port. 
	The sent strings should appear unchanged at the yarp read terminal 
	(except for being broken or having extra control characters from 
	the bottle format).

2007-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: froze version 2.1.6

	* src/libYARP_OS/src/NameConfig.cpp: removed "/conf" added